roles/middleware/files/ingress-prom.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-prom
spec:
  ingressClassName: nginx # 默认 ingressClass
  rules:
  - host: grafana.k8s.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port: 
              number: 80
  - host: prometheus.k8s.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port: 
              number: 9090
